fix depoimentos spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -153,6 +153,10 @@ main a {
   margin-left: 29px;
 }
 
+#depoimentos .column.content {
+  margin-bottom: 0;
+}
+
 #especialidades {
   background-color: var(--color-primary-50);
 }
